# sharepoint_file_uploader

./: .gitignore  Cargo.toml  README.md  deploy_azfn.sh  host.json  start_func.sh
src/: entra_id_model.rs  main.rs  main_azfunc.rs  spo_engine.rs  spo_model.rs
src/blob/: blob2spo.rs  mod.rs
src/spo/: mod.rs  spo_endpoint.rs  spo_engine.rs  spo_model.rs
