[package]
name = "sharepoint_uploader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
azure_core = { version = "0.17", default-features = false,features = ["tokio","enable_reqwest_rustls"] }
azure_identity = { version = "0.17" , default-features = false, features = ["development","enable_reqwest_rustls"] }
azure_storage_blobs = { version = "0.17" , default-features = false,features = ["enable_reqwest_rustls"] }
azure_storage = { version = "0.17", default-features = false, features = ["enable_reqwest_rustls"] }


log = "0.4"
pretty_env_logger = "0.5"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros"] }
oauth2 = "4.4"
reqwest = { version = "0.11", default-features = false,features = ["json","multipart","rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
uuid = { version =  "1.6", default-features = false , features = ["v4","fast-rng","macro-diagnostics"] }
console = "0.15"

